# pyreq

./: .gitignore  README.md  pyproject.toml
pyreq/: __init__.py  main.py  resolve_env_in_yaml.py
